--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 						}
 					</script>
 					<script
-						src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+						src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 				</div>
 			</div>
 		</div>
