fixed br bug and repeating svgs

--- a/best-timing.html
+++ b/best-timing.html
@@ -114,7 +114,7 @@
 		</section>
 
 		<!-- Ideal Time To Peek -->
-		<section class="wrapper style1" id="peek">
+		<section class="wrapper style1 repeating" id="peek">
 			<div class="inner">
 				<header class="major special">
 					<h1>Ideal Time To Peek</h1>
