--- a/book-now.html
+++ b/book-now.html
@@ -101,7 +101,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1">
+		<section class="wrapper style1 repeating">
 			<div class="inner">
 				<header class="major special">
 					<h1>Schedule Now</h1>
