--- a/massage.html
+++ b/massage.html
@@ -101,7 +101,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1" style="background-image: linear-gradient(#f1f1f1, white);">
+		<section class="wrapper style1 repeating" style="background-image: linear-gradient(#f1f1f1, white);">
 			<div class="inner">
 				<header class="major special">
 					<h1>Massage by Alanna Fernandes</h1>
