--- a/packages.html
+++ b/packages.html
@@ -103,7 +103,7 @@
 
 		<!-- 3D/4D Packages -->
 
-		<section class="wrapper style1" style="background-image: linear-gradient(white, #f1f1f1);">
+		<section class="wrapper style1 repeating" style="background-image: linear-gradient(white, #f1f1f1);">
 			<div class="inner">
 				<header class="major special">
 					<h1>3D/4D Ultrasound Packages</h1>
@@ -189,7 +189,7 @@
 
 		<!-- 2D Packages -->
 
-		<section class="wrapper style1">
+		<section class="wrapper style1 repeating">
 			<div class="inner">
 				<header class="major special">
 					<h1>2D Ultrasound Packages</h1>
@@ -312,7 +312,7 @@
 
 		<!-- Specials -->
 
-		<section class="wrapper style1" id="specials">
+		<section class="wrapper style1 repeating" id="specials">
 			<div class="inner">
 				<header class="major special">
 					<h1>Specials</h1>
@@ -364,7 +364,7 @@
 		</section>
 
 		<!-- FAQ -->
-		<section class="wrapper style1" id="faq">
+		<section class="wrapper style1 repeating" id="faq">
 			<div class="inner">
 				<header class="major special">
 					<h1>FAQ</h1>
