--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1" style="background-image: linear-gradient(#f1f1f1, white);">
+		<section class="wrapper style1 repeating" style="background-image: linear-gradient(#f1f1f1, white);">
 			<div class="inner">
 				<header class="major special">
 					<h1>Image Gallery</h1>
