--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 					<p class="centered">Fill out the form below and we will get back to you as soon as possible</p>
 				</header>
 				<section>
-					<form method="post" action="#">
+					<form method="post" action="https://formspree.io/f/xbjbllaj">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall">
 								<input type="text" name="name" id="name" value="" placeholder="Name" />
