--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
 				<h3>Who we are</h3>
 				<p>We are a charming prenatal and postnatal wellness spa, conveniently located in Warwick, Rhode Island.
 					We specialize in many areas pertaining to motherhood and beyond, from 3D/4D imaging to therapeutic
-					massage, yoga, and education.</p>
+					massage.</p>
 				<p>Our intention is to provide you with a warm and inviting space along with nourishing educational and
 					professional services as you journey through motherhood and beyond.</p>
 				<p>We are a group of healthcare professionals eager to serve you and your family. Your satisfaction is
