--- a/forms-policies.html
+++ b/forms-policies.html
@@ -131,6 +131,8 @@
 					<div class="policy-container align-right">
 						<h3>NO-SHOWS</h3>
 						<p>100% of the service will be charged for all no-shows.</p>
+						<p>50% of the service will be charged for any cancelations or reschedules less then 24 hours
+							notice of scheduled appointment.</p>
 					</div>
 				</div>
 
@@ -152,11 +154,11 @@
 					That
 					is our #1 goal!</p>
 
-				<h3>SPA SERVICES APPOINTMENTS</h3>
+				<!--<h3>SPA SERVICES APPOINTMENTS</h3>
 				<p>Please arrive 10-15 minutes prior to your scheduled service so we can get you checked in and have all
 					the
 					required paperwork completed. You don’t want to use up any of your spa service time filling out
-					paperwork, so please arrive early.</p>
+					paperwork, so please arrive early.</p>-->
 
 				<h3>LATE ARRIVALS</h3>
 				<p>If you arrive late, your session may be shortened in order to accommodate others whose appointments
