--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 							</header>
 							<p>We are a charming prenatal and postnatal wellness spa, conveniently located in Warwick,
 								Rhode Island. We specialize in many areas pertaining to motherhood and beyond, from
-								3D/4D imaging to therapeutic massage, yoga, and education.</p>
+								3D/4D imaging to therapeutic massage.</p>
 							<ul class="actions special">
 								<li style="display: block; margin-right: auto;"><a href="book-now.html"
 										class="button primary wide scrolly">Schedule Now</a></li>
@@ -266,7 +266,8 @@
 						<li>
 							<span class="icon alt major fa-heart"></span>
 							<h3>With Care</h3>
-							<p>Our intention is to provide you with a warm and inviting space</p>
+							<p>Our intention is to provide you with a warm and inviting space for you and your family
+							</p>
 						</li>
 					</ul>
 				</div>
