--- a/packages.html
+++ b/packages.html
@@ -315,7 +315,7 @@
 		<section class="wrapper style1 repeating" id="specials">
 			<div class="inner">
 				<header class="major special">
-					<h1>Specials</h1>
+					<h1>Specials</br><span class="small-header">9am - 4pm</span></h1>
 				</header>
 				<div class="testimonials">
 					<div class="innerTest">
