location and phone

--- a/index.html
+++ b/index.html
@@ -279,9 +279,30 @@
 			<div class="inner">
 				<header class="major special">
 					<h2 class="centered">Contact Us</h2>
-					<p class="centered">Fill out the form below and we will get back to you as soon as possible</p>
+					<p class="centered less-margin-2">Fill out the form below and we will get back to you as soon as
+						possible
+					</p>
 				</header>
 				<section>
+					<div>
+						<ul class="icons flex">
+							<li class="flex"><a
+									href="https://www.google.com/maps/place/Babies+%26+Bellies+3D%2F4D+Ultrasound+Studio+%26+Wellness+Spa/@41.711909,-71.4493054,15z/data=!4m6!3m5!1s0x89e445102b0f55e9:0x1b7af00a21ab007!8m2!3d41.711909!4d-71.4493054!16s%2Fg%2F1hc69gcty"
+									class="icon alt solid fa-map-marker"><span class="label">Email</span></a>
+								<p><a
+										href="https://www.google.com/maps/place/Babies+%26+Bellies+3D%2F4D+Ultrasound+Studio+%26+Wellness+Spa/@41.711909,-71.4493054,15z/data=!4m6!3m5!1s0x89e445102b0f55e9:0x1b7af00a21ab007!8m2!3d41.711909!4d-71.4493054!16s%2Fg%2F1hc69gcty">765
+										Main Ave, Warwick, RI 02886</a></p>
+							</li>
+							<li class="flex">
+								<p><a href="tel:4017372229"
+										onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+										737-2229</a></p>
+								<a href="tel:4017372229"
+									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+									class="icon alt solid fa-phone"><span class="label">Phone</span></a>
+							</li>
+						</ul>
+					</div>
 					<form method="post" action="https://formspree.io/f/xbjbllaj">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall">
@@ -304,6 +325,7 @@
 							</div>
 						</div>
 					</form>
+
 				</section>
 			</div>
 		</section>
