cbr logo and policy

--- a/forms-policies.html
+++ b/forms-policies.html
@@ -213,8 +213,15 @@
 					</div>
 					<hr class="major" />
 
-					<div class="image align-center"><a style="border-bottom: none;" href="https://www.enfamil.com/"><img
-								src="images/enfamil.png" alt="" /></a></div>
+					<div class="flexed-row">
+						<div class="image align-center"><a style="border-bottom: none;"
+								href="https://www.enfamil.com/"><img src="images/enfamil.png" alt="" /></a>
+						</div>
+						<div class="image align-center margin-top"><a style="border-bottom: none;"
+								href="https://learn.cordblood.com/CBR-Newsletter.html?mtag=TIX9&utm_source=babies_bellies&utm_medium=referral&utm_campaign=cbr_newsletter_nov22"><img
+									id="cbr" src="images/CBRlogo.png" alt="" /></a></div>
+					</div>
+					<h2 class="privacy"><a href="https://www.cordblood.com/privacy-policy">CBR Privacy Policy</a></h2>
 				</div>
 			</section>
 		</section>
