--- a/forms-policies.html
+++ b/forms-policies.html
@@ -221,7 +221,7 @@
 								href="https://learn.cordblood.com/CBR-Newsletter.html?mtag=TIX9&utm_source=babies_bellies&utm_medium=referral&utm_campaign=cbr_newsletter_nov22"><img
 									id="cbr" src="images/CBRlogo.png" alt="" /></a></div>
 					</div>
-					<h2 class="privacy"><a href="https://www.cordblood.com/privacy-policy">CBR Privacy Policy</a></h2>
+					<!-- <h2 class="privacy"><a href="https://www.cordblood.com/privacy-policy">CBR Privacy Policy</a></h2> -->
 				</div>
 			</section>
 		</section>
