--- a/packages.html
+++ b/packages.html
@@ -113,7 +113,9 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>Baby Bundle $399 (Most Popular!) $573 Value!</b></div>
+									<div class="name"><b>Baby Bundle $409 <span class="smaller">(Most Popular!) $614
+												Value!</span></b>
+									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">“Watch Me Grow” Series of 4 Ultrasound Sessions (Twin $449)
 									</p>
@@ -136,7 +138,8 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>Sneak-a-Peek $99 (Twin $149)</b></div>
+									<div class="name"><b>Sneak-a-Peek $109 <span class="smaller">(Twin $159)</span></b>
+									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24</b> weeks, Best time to book is after 26
 										weeks
@@ -153,7 +156,8 @@
 						<div class="rowPack">
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Sweet Pea $139 (Twin $189)</b></div>
+									<div class="name"><b>Sweet Pea $149 <span class="smaller">(Twin $199)</span></b>
+									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24</b> weeks, Best time to book is after 26
 										weeks
@@ -168,7 +172,8 @@
 							</div>
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Simply Sweet $179 (Twin $229)</b></div>
+									<div class="name"><b>Simply Sweet $189 <span class="smaller">(Twin $239)</span></b>
+									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24</b> weeks, Best time to book is after 26
 										weeks
@@ -199,7 +204,10 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>Baby Bundle $299 (Most Popular!) $415 Value!</b></div>
+									<div class="name"><b>Baby Bundle $309 <span class="smaller">(Most Popular!) $455
+												Value!</span></b></div>
+									<div class="name"><b>“2D Watch Me Grow” Series of 4 Ultrasound Sessions (Twin
+											$359)</b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">*All 2D packages include complimentary 3D quick peek if
 										the
@@ -225,7 +233,8 @@
 						<div class="rowPack">
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Peace of Mind $75 (Twin $105)</b></div>
+									<div class="name"><b>Peace of Mind $85 <span class="smaller">(Twin $115)</span></b>
+									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>9-14</b> weeks
 									</p>
@@ -239,7 +248,8 @@
 							</div>
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Just the Basics $75 (Twin $105)</b></div>
+									<div class="name"><b>Just the Basics $85 <span class="smaller">(Twin
+												$115)</span></b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>24-32</b> weeks
 									</p>
@@ -256,7 +266,8 @@
 						<div class="rowPack">
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Trucks or Tiaras $75 (Twin $105)</b></div>
+									<div class="name"><b>Trucks or Tiaras $85 <span class="smaller">(Twin
+												$115)</span></b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered at <b>15+</b> Weeks
 									</p>
@@ -272,7 +283,8 @@
 							</div>
 							<div class="colPack">
 								<div class="package manilla">
-									<div class="name"><b>Ready to Pop $75 (Twin $105)</b></div>
+									<div class="name"><b>Ready to Pop $85 <span class="smaller">(Twin $115)</span></b>
+									</div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered between <b>33-40</b> Weeks
 									</p>
