--- a/packages.html
+++ b/packages.html
@@ -303,7 +303,8 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>Heartbeat Stuffed Animal 2D Package $50 (Twin $85)</b></div>
+									<div class="name"><b>Heartbeat Stuffed Animal 2D Package $60 <span
+												class="smaller">(Twin $85)</span></b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Offered between <b>15-40</b> Weeks
 									</p>
