--- a/packages.html
+++ b/packages.html
@@ -300,7 +300,7 @@
 							</div>
 						</div>
 
-						<div class="rowPack">
+						<!-- <div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
 									<div class="name"><b>Heartbeat Stuffed Animal 2D Package $60 <span
@@ -317,7 +317,7 @@
 									</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
