--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<!-- Section -->
 		<section class="wrapper style1" id="first">
 			<div class="inner">
-				<header class="major special">
+				<!-- <header class="major special">
 					<h2>COVID-19 Guidelines</h2>
 					<button class="collapsible">Expand <i id="expandIcon" class="fas fa-angle-down fa-lg"></i></button>
 
@@ -177,7 +177,7 @@
 							Babies & Bellies 3D/4D Ultrasound Family</p>
 					</div>
 
-					<!-- Expandable Row Script -->
+					Expandable Row Script
 
 					<script>
 						var coll = document.getElementsByClassName("collapsible");
@@ -199,7 +199,7 @@
 						}
 					</script>
 
-				</header>
+				</header> -->
 				<div class="spotlights">
 					<section>
 						<div class="image"><img src="images/6square.png" alt="" /></div>
