--- a/best-timing.html
+++ b/best-timing.html
@@ -137,7 +137,7 @@
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
-									<div class="name"><b>15-23 Weeks:</b></div>
+									<div class="name"><b>Starting at 15 Weeks:</b></div>
 									<div class="borderPack"></div>
 									<p class="smallSpecial">Gender reveal! This is a great time to see your baby. At
 										this stage the baby is very active. The baby is still small enough where you
