--- a/forms-policies.html
+++ b/forms-policies.html
@@ -109,16 +109,16 @@
 				<!--<div class="image main"><img id="formImg" src="images/exam-room.jpg" alt="" /></div>-->
 				<h3 class="centered">Forms</h3>
 				<ul class="actions special">
-					<li><a href="https://forms.vagaro.com/us03/formresponse/hDHnhSN4UmNqHOT3q425xPKOU7zZ4ByaAj5kBxtdJoz0"
-							class="button primary wide scrolly">COVID-19 Consent Form</a></li>
+					<li><a href="https://forms.vagaro.com/5f9c80e94e91d90e0c145f45"
+							class="button primary wide scrolly">Ultrasound Client Form</a></li>
 					<li><a href="https://forms.vagaro.com/5f9c82988c0e522468db8100"
 							class="button primary wide scrolly">Images and Return Visits</a></li>
 
 				</ul>
 
 				<ul class="actions special">
-					<li><a href="https://forms.vagaro.com/5f9c80e94e91d90e0c145f45"
-							class="button primary wide scrolly">Ultrasound Client Form</a></li>
+					<!-- <li><a href="https://forms.vagaro.com/us03/formresponse/hDHnhSN4UmNqHOT3q425xPKOU7zZ4ByaAj5kBxtdJoz0"
+							class="button primary wide scrolly">COVID-19 Consent Form</a></li> -->
 					<li><a href="index.html#six" class="button primary accent wide scrolly">Contact Us</a></li>
 				</ul>
 
