--- a/packages.html
+++ b/packages.html
@@ -110,31 +110,7 @@
 				</header>
 				<div class="packages" style="padding-bottom: 0;">
 					<div class="innerPack">
-						<div class="rowPack">
-							<div class="colPackBig">
-								<div class="package manilla">
-									<div class="name"><b>Baby Bundle $409 <span class="smaller">(Most Popular!) $614
-												Value!</span></b>
-									</div>
-									<div class="borderPack"></div>
-									<p class="smallSpecial">“Watch Me Grow” Series of 4 Ultrasound Sessions (Twin $449)
-									</p>
-									<p class="smallSpecial">A great value to watch your baby grow throughout your
-										pregnancy journey!</p>
-									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Trucks or Tiaras)</b></p>
-									<p class="smallSpecial"><b>2nd Visit 24-26 weeks (Sweet Pea)</b></p>
-									<p class="smallSpecial"><b>3rd Visit 28-32 weeks (Sweet Pea)</b></p>
-									<p class="smallSpecial"><b>4th Visit 33-40 Weeks (Ready to Pop)</b></p>
-									<p class="smallSpecial">Mommy gift bag at session #1
-										</br>Free Heartbeat stuffed
-										animal of your choice at session #2
-										</br>Free Video clips at each session
-										</br>“Link” of digital photo album sent via email or text @ each session
-										</br>Add photo pkg for $35 (10-15 black & white prints and 3 color prints) @
-										each session</p>
-								</div>
-							</div>
-						</div>
+
 						<div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
@@ -187,6 +163,32 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="rowPack">
+							<div class="colPackBig">
+								<div class="package manilla">
+									<div class="name"><b>Baby Bundle $409 <span class="smaller">(Most Popular!) $614
+												Value!</span></b>
+									</div>
+									<div class="borderPack"></div>
+									<p class="smallSpecial">“Watch Me Grow” Series of 4 Ultrasound Sessions (Twin $449)
+									</p>
+									<p class="smallSpecial">A great value to watch your baby grow throughout your
+										pregnancy journey!</p>
+									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Trucks or Tiaras)</b></p>
+									<p class="smallSpecial"><b>2nd Visit 24-26 weeks (Sweet Pea)</b></p>
+									<p class="smallSpecial"><b>3rd Visit 28-32 weeks (Sweet Pea)</b></p>
+									<p class="smallSpecial"><b>4th Visit 33-40 Weeks (Ready to Pop)</b></p>
+									<p class="smallSpecial">Mommy gift bag at session #1
+										</br>Free Heartbeat stuffed
+										animal of your choice at session #2
+										</br>Free Video clips at each session
+										</br>“Link” of digital photo album sent via email or text @ each session
+										</br>Add photo pkg for $35 (10-15 black & white prints and 3 color prints) @
+										each session</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -201,34 +203,6 @@
 				</header>
 				<div class="packages">
 					<div class="innerPack">
-						<div class="rowPack">
-							<div class="colPackBig">
-								<div class="package manilla">
-									<div class="name"><b>Baby Bundle $309 <span class="smaller">(Most Popular!) $455
-												Value!</span></b></div>
-									<div class="name"><b>“2D Watch Me Grow” Series of 4 Ultrasound Sessions (Twin
-											$359)</b></div>
-									<div class="borderPack"></div>
-									<p class="smallSpecial">*All 2D packages include complimentary 3D quick peek if
-										the
-										baby is in a favorable position*
-									</p>
-									<p class="smallSpecial">A great value to watch your baby grow throughout your
-										pregnancy journey!</p>
-									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Trucks or Tiaras)</b></p>
-									<p class="smallSpecial"><b>2nd Visit 24-32 weeks (Just the Basics)</b></p>
-									<p class="smallSpecial"><b>3rd Visit 24-32 weeks (Just the Basics)</b></p>
-									<p class="smallSpecial"><b>4th Visit 33-40 weeks (Ready to Pop)</b></p>
-									<p class="smallSpecial">Mommy gift bag at session #1
-										</br>Free Heartbeat stuffed
-										animal of your choice at session #2
-										</br>Free 3D quick peek at all sessions
-										</br>Free Video clips at all sessions
-										</br>“Link” of digital photo album sent via email or text @ each session
-										</br>Add photo pkg for $20 (10-15 black & white prints) @ each session</p>
-								</div>
-							</div>
-						</div>
 
 						<div class="rowPack">
 							<div class="colPack">
@@ -277,7 +251,7 @@
 										</br>Complimentary 3D quick peek
 										</br>Free return visit if we are unable to determine gender
 										</br>“Link” of digital photo album sent via email or text
-										</br>Add photo pkg for $20 (10-15 black & white prints and 3 color prints)
+										</br>Add photo pkg for $10 (10-15 black & white prints and 3 color prints)
 									</p>
 								</div>
 							</div>
@@ -300,6 +274,35 @@
 							</div>
 						</div>
 
+						<div class="rowPack">
+							<div class="colPackBig">
+								<div class="package manilla">
+									<div class="name"><b>Baby Bundle $309 <span class="smaller">(Most Popular!) $455
+												Value!</span></b></div>
+									<div class="name"><b>“2D Watch Me Grow” Series of 4 Ultrasound Sessions (Twin
+											$359)</b></div>
+									<div class="borderPack"></div>
+									<p class="smallSpecial">*All 2D packages include complimentary 3D quick peek if
+										the
+										baby is in a favorable position*
+									</p>
+									<p class="smallSpecial">A great value to watch your baby grow throughout your
+										pregnancy journey!</p>
+									<p class="smallSpecial"><b>1st Visit 15-23 weeks (Trucks or Tiaras)</b></p>
+									<p class="smallSpecial"><b>2nd Visit 24-32 weeks (Just the Basics)</b></p>
+									<p class="smallSpecial"><b>3rd Visit 24-32 weeks (Just the Basics)</b></p>
+									<p class="smallSpecial"><b>4th Visit 33-40 weeks (Ready to Pop)</b></p>
+									<p class="smallSpecial">Mommy gift bag at session #1
+										</br>Free Heartbeat stuffed
+										animal of your choice at session #2
+										</br>Free 3D quick peek at all sessions
+										</br>Free Video clips at all sessions
+										</br>“Link” of digital photo album sent via email or text @ each session
+										</br>Add photo pkg for $20 (10-15 black & white prints) @ each session</p>
+								</div>
+							</div>
+						</div>
+
 						<!-- <div class="rowPack">
 							<div class="colPackBig">
 								<div class="package manilla">
@@ -318,6 +321,47 @@
 								</div>
 							</div>
 						</div> -->
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Addons -->
+
+		<section class="wrapper style1 repeating">
+			<div class="inner">
+				<header class="major special">
+					<h1>Perfect Add-ons</h1>
+				</header>
+				<div class="packages">
+					<div class="innerPack">
+
+						<div class="rowPack">
+							<div class="colPackBig">
+								<div class="package manilla">
+									<div class="name"><b>Perfect Add-ons</b></div>
+									<div class="borderPack"></div>
+									<p class="smallSpecial"><b>HD Live</b> High Definition Images captured of your baby
+										- <b>$35</b></p>
+									<p class="smallSpecial"><b>Huggable Plush Heartbeat Stuffed Animal</b> with your
+										babies heartbeat tucked inside (capture your babies heartbeat in an Adorable
+										Keepsake) - Large <b>$35</b> Small <b>$25</b></p>
+									<p class="smallSpecial"><b>Heart Shaped Sound Recorder -</b> Capture the sound of
+										your voice on an adorable sound module keepsake. A great way to send a message
+										to a friend or loved one (recorder and gift box only) - <b>$15</b></p>
+									<p class="smallSpecial"><b>2D Video Clips</b> Includes 2-5 2D video clips and your
+										digital album link (can be added to any 2D package) - <b>$20</b></p>
+									<p class="smallSpecial"><b>4D Video Clips</b> Includes 2-5 video clips in digital
+										album link - <b>$35</b></p>
+									<p class="smallSpecial"><b>CD of Images</b> Includes a CD with all digital images
+										- <b>$10</b>
+									</p>
+									<p class="smallSpecial"><b>EFW</b> - Estimated Fetal Weight (measurements of your
+										baby's estimated weight) - <b>$10</b></p>
+								</div>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -368,7 +412,7 @@
 				<div class="less-bottom-pad">
 					<p class="centered"><b>Daily Specials cannot be combined with any other promotion (coupons or other
 							discounts).</b></p>
-					<p class="centered">2D/3D Watch Me Grow packages and 2D Heartbeat Stuffed Animal do not qualify for
+					<p class="centered">2D/3D Watch Me Grow packages do not qualify for
 						Daily Specials</p>
 					<p class="centered">A redo visits cannot be scheduled if baby isn’t in a favorable position for any
 						Daily Specials.</p>
