--- a/packages.html
+++ b/packages.html
@@ -251,7 +251,7 @@
 										</br>Complimentary 3D quick peek
 										</br>Free return visit if we are unable to determine gender
 										</br>“Link” of digital photo album sent via email or text
-										</br>Add photo pkg for $10 (10-15 black & white prints and 3 color prints)
+										</br>Add photo pkg for $10 (5-10 black & white prints)
 									</p>
 								</div>
 							</div>
