--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
 
 				<ul class="actions special">
 					<li><a href="book-now.html" class="button primary wide scrolly">Schedule Now</a></li>
-					<li><a href="tel:4017372229"
-							onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-							class="button primary wide scrolly">Call Now</a></li>
+					<li><a href="tel:4017372229" class="button primary wide scrolly">Call Now</a></li>
 				</ul>
 			</div>
 		</section>
@@ -294,12 +292,10 @@
 										Main Ave, Warwick, RI 02886</a></p>
 							</li>
 							<li class="flex">
-								<p><a href="tel:4017372229"
-										onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">(401)
+								<p><a href="tel:4017372229">(401)
 										737-2229</a></p>
-								<a href="tel:4017372229"
-									onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-									class="icon alt solid fa-phone"><span class="label">Phone</span></a>
+								<a href="tel:4017372229" class="icon alt solid fa-phone"><span
+										class="label">Phone</span></a>
 							</li>
 						</ul>
 					</div>
@@ -339,9 +335,7 @@
 							class="label">Instagram</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=michelle@babiesandbellies3d.com&su=Subject&body=Body"
 						class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				<li><a href="tel:4017372229"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:4017372229" class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
 			</ul>
 			<div class="align-center">
 				<p id="fee">All Credit Card purchases will require a 2.9% Credit Card
