--- a/book-now.html
+++ b/book-now.html
@@ -107,9 +107,8 @@
 					<h1>Schedule Now</h1>
 					<p class="less-margin">Appointments can also be made by calling</p>
 					<ul class="actions special">
-						<li><a href="tel:4017372229"
-								onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-								class="button primary wide scrolly" style="margin-bottom: 2em !important;">Call Now</a>
+						<li><a href="tel:4017372229" class="button primary wide scrolly"
+								style="margin-bottom: 2em !important;">Call Now</a>
 						</li>
 					</ul>
 				</header>
@@ -144,9 +143,7 @@
 							class="label">Instagram</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=michelle@babiesandbellies3d.com&su=Subject&body=Body"
 						class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				<li><a href="tel:4017372229"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:4017372229" class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
 			</ul>
 			<div class="align-center">
 				<p id="fee">All Credit Card purchases will require a 2.9% Credit Card
