--- a/massage.html
+++ b/massage.html
@@ -165,9 +165,7 @@
 							class="label">Instagram</span></a></li>
 				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=michelle@babiesandbellies3d.com&su=Subject&body=Body"
 						class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				<li><a href="tel:4017372229"
-						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
-						class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:4017372229" class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
 			</ul>
 			<div class="align-center">
 				<p id="fee">All Credit Card purchases will require a 2.9% Credit Card
