resource tab and resource reconfig

--- a/book-now.html
+++ b/book-now.html
@@ -74,7 +74,7 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li>
 						<a href="packages.html" class="icon solid fa-angle-down">Ultrasound Packages</a>
@@ -88,13 +88,9 @@
 						</ul>
 					</li>
 					<li><a href="massage.html">Massage Services</a></li>
-					<li>
-						<a href="forms-policies.html" class="icon solid fa-angle-down">Forms/Policies</a>
-						<ul>
-							<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
-						</ul>
-					</li>
-					<li><a href="index.html#six" class="scrolly">Contact Us</a></li>
+					<li><a href="forms-policies.html">Forms/Policies</a></li>
+					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
+					<li class="current"><a href="index.html#six" class="scrolly">Contact Us</a></li>
 				</ul>
 			</nav>
 
