--- a/forms-policies.html
+++ b/forms-policies.html
@@ -88,12 +88,8 @@
 						</ul>
 					</li>
 					<li><a href="massage.html">Massage Services</a></li>
-					<li class="current">
-						<a href="forms-policies.html" class="icon solid fa-angle-down">Forms/Policies</a>
-						<ul>
-							<li><a href="#resources" class="subMenu scrolly">Resources</a></li>
-						</ul>
-					</li>
+					<li class="current"><a href="forms-policies.html">Forms/Policies</a></li>
+					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
 					<li><a href="index.html#six" class="scrolly">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -196,10 +192,46 @@
 				<div class="inner">
 					<header class="major special">
 						<h1>Resources</h1>
-						<p style="margin-bottom: 2em;">Need resources? Follow the links</br>
-							below to find out more!</p>
+						<p style="margin-bottom: 2em;">We Have Discounts for...</p>
 					</header>
-					<div>
+					<div class="flexed-row">
+						<div class="image align-center resource-imgs"
+							style="flex-direction: column; align-items: center;"><a style="border-bottom: none;"
+								href="https://sarazarrella.com/"><img class="double-image" src="images/SZ.png"
+									alt="" /></a>
+							<a href="https://sarazarrella.com/" style="border-bottom: none; margin-top: 1em;">
+								<h4>Sara Zarrella</h4>
+							</a>
+						</div>
+						<div class="image align-center margin-top resource-imgs"
+							style="flex-direction: column; align-items: center;"><a style="border-bottom: none;"
+								href="https://sarazarrella.com/rockyourbooth"><img class="double-image"
+									src="images/RYB.png" alt="" /></a>
+							<a href="https://sarazarrella.com/rockyourbooth"
+								style="border-bottom: none; margin-top: 1em;">
+								<h4>Rock Your Booth</h4>
+							</a>
+						</div>
+					</div>
+					<div class="flexed-row">
+						<div class="image align-center resource-imgs"
+							style="flex-direction: column; align-items: center;"><a style="border-bottom: none;"
+								href="https://threelollies.com/"><img class="double-image"
+									src="images/three-lollies-logo.png" alt="" /></a>
+							<a href="https://threelollies.com/" style="border-bottom: none; margin-top: 1em;">
+								<h4>Three Lollies</h4>
+							</a>
+						</div>
+						<div class="image align-center margin-top resource-imgs"
+							style="flex-direction: column; align-items: center;"><a style="border-bottom: none;"
+								href="https://blisslets.com/"><img class="double-image" src="images/Blisslets_logo.avif"
+									alt="" /></a>
+							<a href="https://blisslets.com/" style="border-bottom: none; margin-top: 1em;">
+								<h4>Blisslets</h4>
+							</a>
+						</div>
+					</div>
+					<!-- <div>
 						<ul class="actions special">
 							<li><a href="https://sarazarrella.com/" class="button wide">Sarah Zarrella</a></li>
 							<li><a href="https://sarazarrella.com/rockyourbooth" class="button wide">Rock
@@ -210,7 +242,7 @@
 							<li><a href="https://threelollies.com/" class="button wide">Three Lollies</a></li>
 							<li><a href="https://blisslets.com/" class="button wide">Blisslets</a></li>
 						</ul>
-					</div>
+					</div> -->
 					<hr class="major" />
 
 					<div class="flexed-row">
@@ -220,6 +252,16 @@
 						<div class="image align-center margin-top"><a style="border-bottom: none;"
 								href="https://learn.cordblood.com/CBR-Newsletter.html?mtag=TIX9&utm_source=babies_bellies&utm_medium=referral&utm_campaign=cbr_newsletter_nov22"><img
 									id="cbr" src="images/CBRlogo.png" alt="" /></a></div>
+					</div>
+					<div>
+						<p style="max-width: 60ch; text-align: center; margin: 0 auto; margin-top: 2em;">For more
+							information about the
+							benefits of
+							preserving your baby’s
+							newborn stem cells, or to
+							receive babies and bellies partnership pricing with CBR, call Kerry Mulvaney at
+							<a href="tel:6172832640">617-283-2640</a>.
+						</p>
 					</div>
 					<!-- <h2 class="privacy"><a href="https://www.cordblood.com/privacy-policy">CBR Privacy Policy</a></h2> -->
 				</div>
