--- a/index.html
+++ b/index.html
@@ -89,12 +89,8 @@
 						</ul>
 					</li>
 					<li><a href="massage.html">Massage Services</a></li>
-					<li>
-						<a href="forms-policies.html" class="icon solid fa-angle-down">Forms/Policies</a>
-						<ul>
-							<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
-						</ul>
-					</li>
+					<li><a href="forms-policies.html">Forms/Policies</a></li>
+					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
 					<li><a href="#six" class="scrolly">Contact Us</a></li>
 				</ul>
 			</nav>
