--- a/best-timing.html
+++ b/best-timing.html
@@ -83,17 +83,13 @@
 							<li><a href="packages.html#specials" class="subMenu">Specials</a></li>
 							<li><a href="packages.html#faq" class="subMenu">FAQ</a></li>
 							<li><a href="best-timing.html" class="subMenu">Pregnancy Calendar</a></li>
-							<li><a href="#peek" class="subMenu scrolly">Ideal Time To Peek</a></li>
+							<li><a href="best-timing.html#peek" class="subMenu">Ideal Time To Peek</a></li>
 							<li><a href="gallery.html" class="subMenu">Gallery</a></li>
 						</ul>
 					</li>
 					<li><a href="massage.html">Massage Services</a></li>
-					<li>
-						<a href="forms-policies.html" class="icon solid fa-angle-down">Forms/Policies</a>
-						<ul>
-							<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
-						</ul>
-					</li>
+					<li><a href="forms-policies.html">Forms/Policies</a></li>
+					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
 					<li><a href="index.html#six" class="scrolly">Contact Us</a></li>
 				</ul>
 			</nav>
