--- a/gallery.html
+++ b/gallery.html
@@ -79,20 +79,20 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
-					<li class="current">
+					<li>
 						<a href="packages.html" class="icon solid fa-angle-down">Ultrasound Packages</a>
 						<ul>
 							<li><a href="packages.html" class="subMenu">2D/3D/4D Ultrasound</a></li>
 							<li><a href="packages.html#specials" class="subMenu">Specials</a></li>
 							<li><a href="packages.html#faq" class="subMenu">FAQ</a></li>
 							<li><a href="best-timing.html" class="subMenu">Pregnancy Calendar</a></li>
-							<li><a href="best-timing.html#peek" class="subMenu">Ideal Time To Peek</a></li>
-							<li><a href="gallery.html" class="subMenu">Gallery</a></li>
+							<li><a href="best-timing.html#peek">Ideal Time To Peek</a></li>
 						</ul>
 					</li>
 					<li><a href="massage.html">Massage Services</a></li>
 					<li><a href="forms-policies.html">Forms/Policies</a></li>
 					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
+					<li class="current"><a href="gallery.html">Gallery</a></li>
 					<li><a href="index.html#six" class="scrolly">Contact Us</a></li>
 				</ul>
 			</nav>
@@ -109,6 +109,11 @@
 					<div class="container " id="gallery">
 						<div id="nanogallery2" data-nanogallery2='{
 							  "thumbnailHeight":  ' auto', "thumbnailWidth" : 'auto' }'>
+							<a href="images/g8.png" data-ngThumb="images/g8.png"></a>
+							<a href="images/g13.jpg" data-ngThumb="images/g13.jpg"></a>
+							<a href="images/g15.jpg" data-ngThumb="images/g15.jpg"></a>
+							<a href="images/g17.jpg" data-ngThumb="images/g17.jpg"></a>
+							<a href="images/g25.jpg" data-ngThumb="images/g25.jpg"></a>
 							<a href="images/g1.jpg" data-ngThumb="images/g1.jpg"></a>
 							<a href="images/g2.jpg" data-ngThumb="images/g2.jpg"></a>
 							<a href="images/g3.jpg" data-ngThumb="images/g3.jpg"></a>
@@ -116,16 +121,12 @@
 							<a href="images/g5.jpg" data-ngThumb="images/g5.jpg"></a>
 							<a href="images/g6.jpg" data-ngThumb="images/g6.jpg"></a>
 							<a href="images/g7.jpg" data-ngThumb="images/g7.jpg"></a>
-							<a href="images/g8.png" data-ngThumb="images/g8.png"></a>
 							<a href="images/g9.jpg" data-ngThumb="images/g9.jpg"></a>
 							<a href="images/g10.jpg" data-ngThumb="images/g10.jpg"></a>
 							<a href="images/g11.jpg" data-ngThumb="images/g11.jpg"></a>
 							<a href="images/g12.jpg" data-ngThumb="images/g12.jpg"></a>
-							<a href="images/g13.jpg" data-ngThumb="images/g13.jpg"></a>
 							<a href="images/g14.jpg" data-ngThumb="images/g14.jpg"></a>
-							<a href="images/g15.jpg" data-ngThumb="images/g15.jpg"></a>
 							<a href="images/g16.jpg" data-ngThumb="images/g16.jpg"></a>
-							<a href="images/g17.jpg" data-ngThumb="images/g17.jpg"></a>
 							<a href="images/g18.jpg" data-ngThumb="images/g18.jpg"></a>
 							<a href="images/g19.jpg" data-ngThumb="images/g19.jpg"></a>
 							<a href="images/g20.jpg" data-ngThumb="images/g20.jpg"></a>
@@ -133,7 +134,6 @@
 							<a href="images/g22.jpg" data-ngThumb="images/g22.jpg"></a>
 							<a href="images/g23.jpg" data-ngThumb="images/g23.jpg"></a>
 							<a href="images/g24.jpg" data-ngThumb="images/g24.jpg"></a>
-							<a href="images/g25.jpg" data-ngThumb="images/g25.jpg"></a>
 							<a href="images/g26.jpg" data-ngThumb="images/g26.jpg"></a>
 							<a href="images/g27.jpg" data-ngThumb="images/g27.jpg"></a>
 						</div>
