--- a/packages.html
+++ b/packages.html
@@ -85,12 +85,12 @@
 							<li><a href="packages.html#faq" class="subMenu">FAQ</a></li>
 							<li><a href="best-timing.html" class="subMenu">Pregnancy Calendar</a></li>
 							<li><a href="best-timing.html#peek" class="subMenu">Ideal Time To Peek</a></li>
-							<li><a href="gallery.html" class="subMenu">Gallery</a></li>
 						</ul>
 					</li>
 					<li><a href="massage.html">Massage Services</a></li>
 					<li><a href="forms-policies.html">Forms/Policies</a></li>
-					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
+					<li><a href="forms-policies.html#resources">Resources</a></li>
+					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="index.html#six" class="scrolly">Contact Us</a></li>
 				</ul>
 			</nav>
