--- a/index.html
+++ b/index.html
@@ -358,6 +358,7 @@
 				<div class="image specials"><img src="images/wednesday.png" alt="" /></div> -->
 				<div class="image specials"><img class="spec-img" src="images/specials-all3.png" alt="" /></div>
 			</div>
+			<p style="text-align: center; margin-bottom: 1em;">9:00AM - 4:00PM</p>
 			<ul class="actions special modal-button">
 				<li><a href="tel:4017372229" class="button primary">Call Now</a></li>
 			</ul>
