swap shit around

--- a/index.html
+++ b/index.html
@@ -352,13 +352,13 @@
 		<div class="modal-content">
 			<span class="close">&times;</span>
 			<h3 class="modal-header" style="text-align: center; margin-bottom: 0;"><b>Daily Specials</b></h3>
+			<p style="text-align: center; margin-bottom: 0;">9:00AM - 4:00PM</p>
 			<div class="specials-container">
 				<!-- <div class="image specials"><img src="images/monday.png" alt="" /></div>
 				<div class="image specials"><img src="images/tuesday.png" alt="" /></div>
 				<div class="image specials"><img src="images/wednesday.png" alt="" /></div> -->
 				<div class="image specials"><img class="spec-img" src="images/specials-all3.png" alt="" /></div>
 			</div>
-			<p style="text-align: center; margin-bottom: 1em;">9:00AM - 4:00PM</p>
 			<ul class="actions special modal-button">
 				<li><a href="tel:4017372229" class="button primary">Call Now</a></li>
 			</ul>
