hsa cards, modal word changes

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<header class="major special">
 					<div class="image"><img id="landingLogo" src="images/logo.png" alt="" /></div>
 				</header>
-
+				<p>Now accepting HSA/FSA cards!</p>
 				<ul class="actions special">
 					<li><a href="book-now.html" class="button primary wide scrolly">Schedule Now</a></li>
 					<li><a href="tel:4017372229" class="button primary wide scrolly">Call Now</a></li>
@@ -352,7 +352,7 @@
 		<div class="modal-content">
 			<span class="close">&times;</span>
 			<h3 class="modal-header" style="text-align: center; margin-bottom: 0;"><b>Daily Specials</b></h3>
-			<p style="text-align: center; margin-bottom: 0;">9:00AM - 4:00PM</p>
+			<p style="text-align: center; margin-bottom: 0;">Between the hours of 9:00AM - 4:00PM Monday - Wednesday</p>
 			<div class="specials-container">
 				<!-- <div class="image specials"><img src="images/monday.png" alt="" /></div>
 				<div class="image specials"><img src="images/tuesday.png" alt="" /></div>
