--- a/diagnostic.html
+++ b/diagnostic.html
@@ -80,14 +80,15 @@
 						<a href="packages.html" class="icon solid fa-angle-down">Ultrasound Packages</a>
 						<ul>
 							<li><a href="packages.html" class="subMenu">2D/3D/4D Ultrasound</a></li>
-							<li><a href="packages.html#specials" class="subMenu">Specials</a></li>
-							<li><a href="packages.html#faq" class="subMenu">FAQ</a></li>
+							<li><a href="specials.html" class="subMenu">Specials</a></li>
+							<li><a href="packages.html" class="subMenu">FAQ</a></li>
 							<li><a href="best-timing.html" class="subMenu">Pregnancy Calendar</a></li>
-							<li><a href="best-timing.html#peek" class="subMenu">Ideal Time To Peek</a></li>
+							<li><a href="best-timing.html" class="subMenu">Ideal Time To Peek</a></li>
+							<li><a href="gallery.html" class="subMenu">Gallery</a></li>
 						</ul>
 					</li>
-					<li><a href="diagnostic.html">Diagnostic Ultrasound Services</a></li>
-					<li class="current"><a href="massage.html">Massage Services</a></li>
+					<li class="current"><a href="diagnostic.html">Diagnostic Ultrasound Services</a></li>
+					<li><a href="massage.html">Massage Services</a></li>
 					<li>
 						<a href="forms-policies.html" class="icon solid fa-angle-down">Forms/Policies</a>
 						<ul>
@@ -102,58 +103,89 @@
 		</section>
 
 		<!-- Section -->
-		<section class="wrapper style1 repeating" style="background-image: linear-gradient(#f1f1f1, white);">
+		<section class="wrapper style1">
 			<div class="inner">
 				<header class="major special">
-					<h1>Massage by Alanna Fernandes</h1>
-					<p>Here to help assist you in your healing process</p>
+					<h1>Diagnostic Ultrasound Services</h1>
 				</header>
-				<!--<div class="image main"><img src="images/pic04.jpg" alt="" /></div>-->
-				<p>Hi, my name is Alanna, and I have been a Licensed Massage Therapist for a decade. I am located in the
-					office of Babies and Bellies 3D/4D Ultrasound Studio and Prenatal Wellness spa.. Appointments are
-					made directly through me which you can text, call, or book yourself online at
-					vagaro.com/alannafernandes ! If there is any day or time you do not see listed on my Vagaro page,
-					please contact me at (401) 472-4252 as there might be something available. Each service price listed
-					is standard for any therapeutic, deep tissue, or prenatal massage.</p>
-				<hr class="major" />
-				<div class="packages">
-					<div class="innerPack">
-						<div class="rowPack">
-							<div class="colPack">
-								<div class="package manilla green-package">
-									<div class="name"><b>Massage Service Hours</b></div>
-									<div class="borderPack"></div>
-									<p class="smallSpecial">Sunday: CLOSED
-										</br>Monday: 10:00 AM – 4:30 PM
-										</br>Tuesday: 10:00 AM – 7:00 PM
-										</br>Wednesday: 10:00 AM – 7:00 PM
-										</br>Thursday: 10:00 AM – 7:00 PM
-										</br>Friday: 10:00 AM – 7:00 PM
-										</br>Saturday: 10:30 AM – 3:00 PM</br></br></br>
-									</p>
-								</div>
-							</div>
-							<div class="colPack">
-								<div class="package manilla green-package">
-									<div class="name"><b>Massage Price List</b></div>
-									<div class="borderPack"></div>
-									<p class="smallSpecial">30 min Therapeutic Starting at $50
-										</br>45 min Therapeutic Starting at $65
-										</br>1 Hour Therapeutic Starting at $85
-										</br>90 min Therapeutic Starting at $115
-										</br>1 Hour Prenatal Starting at $85
-										</br>90 min Prenatal Starting at $115
-									</p>
-									<div class="name"><b>Add on:</b></div>
-									<p class="smallSpecial">Hot Stones – $20
-										</br>Gua Sha – $15
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
+				<div class="table-wrapper">
+					<table>
+						<thead>
+							<tr>
+								<th>Type</th>
+								<th>Description</th>
+								<th>Code</th>
+							</tr>
+						</thead>
+						<tbody>
+							<!-- Obstetrical -->
+							<tr>
+								<td>Obstetrical</td>
+								<td>1st trimester pregnancy confirmation and dating</td>
+								<td>76801</td>
+							</tr>
+							<tr>
+								<td>Obstetrical</td>
+								<td>2nd trimester anatomy</td>
+								<td>76811</td>
+							</tr>
+							<tr>
+								<td>Obstetrical</td>
+								<td>3rd trimester growth</td>
+								<td>76805</td>
+							</tr>
+							<tr>
+								<td>Obstetrical</td>
+								<td>AFI, position, placenta check, misc.</td>
+								<td>76816</td>
+							</tr>
+							<tr>
+								<td>Obstetrical</td>
+								<td>Biophysical profile - fetal wellbeing</td>
+								<td>76819</td>
+							</tr>
+							<!-- Gynecological -->
+							<tr>
+								<td>Gynecological</td>
+								<td>Pelvic</td>
+								<td>76856</td>
+							</tr>
+							<tr>
+								<td>Gynecological</td>
+								<td>Transvaginal</td>
+								<td>76830</td>
+							</tr>
+							<!-- Fertility -->
+							<tr>
+								<td>Fertility - follicle checks</td>
+								<td>Transvaginal</td>
+								<td>76830</td>
+							</tr>
+							<!-- Abdominal -->
+							<tr>
+								<td>Abdominal</td>
+								<td>Gallbladder, liver, kidneys, etc.</td>
+								<td>76700</td>
+							</tr>
+							<!-- Thyroid -->
+							<tr>
+								<td>Thyroid</td>
+								<td></td>
+								<td>76836</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
-				<div class="image main"><img id="alanna" src="images/Alanna-Massage.png" alt="" /></div>
+				<p style="text-align: center;">We accept most insurances and also offer <b>self-pay options</b></p>
+				<p style="text-align: center;"><b>You interpret the results or we do it for you.</br> Professional
+						readings
+						are provided by well respected, board certified Radiologists.</b></p>
+
+				<p style="text-align: center;">Have Questions? Give us a call!</p>
+
+				<ul class="actions special">
+					<li><a href="tel:4017372229" class="button primary wide scrolly">Call Now</a></li>
+				</ul>
 			</div>
 		</section>
 
@@ -164,18 +196,12 @@
 						class="icon alt brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 				<li><a href="https://www.instagram.com/babiesandbellies3d/" class="icon alt brands fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=michelle@babiesandbellies3d.com&su=Subject&body=Body"
+				<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=mrsart150@gmail.com&su=Subject&body=Body"
 						class="icon alt fa-envelope"><span class="label">Email</span></a></li>
-				<li><a href="tel:4017372229" class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
+				<li><a href="tel:4017372229"
+						onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"
+						class="icon alt solid fa-phone"><span class="label">Phone</span></a></li>
 			</ul>
-			<div class="align-center">
-				<p id="fee">All Credit Card purchases will require a 2.9% Credit Card
-					Processing Fee.
-					This processing fee will apply to all deposits previously taken at time of scheduling.
-					<br>Thank you,
-					Babies & Bellies Management
-				</p>
-			</div>
 			<p class="copyright">
 				&copy; <a href="https://www.webundefined.com/">Web Undefined, LLC</a>. All rights reserved.
 			</p>
