--- a/gallery.html
+++ b/gallery.html
@@ -89,9 +89,14 @@
 							<li><a href="best-timing.html#peek">Ideal Time To Peek</a></li>
 						</ul>
 					</li>
+					<li><a href="diagnostic.html">Diagnostic Ultrasound Services</a></li>
 					<li><a href="massage.html">Massage Services</a></li>
-					<li><a href="forms-policies.html">Forms/Policies</a></li>
-					<li><a href="forms-policies.html#resources" class="subMenu">Resources</a></li>
+					<li>
+						<a href="forms-policies.html" class="icon solid fa-angle-down">Forms/Policies</a>
+						<ul>
+							<li><a href="forms-policies.html#resources">Resources</a></li>
+						</ul>
+					</li>
 					<li class="current"><a href="gallery.html">Gallery</a></li>
 					<li><a href="index.html#six" class="scrolly">Contact Us</a></li>
 				</ul>
