prices in table

--- a/diagnostic.html
+++ b/diagnostic.html
@@ -115,6 +115,7 @@
 								<th>Type</th>
 								<th>Description</th>
 								<th>Code</th>
+								<th>Price</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -123,55 +124,65 @@
 								<td>Obstetrical</td>
 								<td>1st trimester pregnancy confirmation and dating</td>
 								<td>76801</td>
+								<td>$129</td>
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
 								<td>2nd trimester anatomy</td>
 								<td>76811</td>
+								<td>$229</td>
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
 								<td>3rd trimester growth</td>
 								<td>76805</td>
+								<td>$129</td>
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
 								<td>AFI, position, placenta check, misc.</td>
 								<td>76816</td>
+								<td>$105</td>
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
 								<td>Biophysical profile - fetal wellbeing</td>
 								<td>76819</td>
+								<td>$105</td>
 							</tr>
 							<!-- Gynecological -->
 							<tr>
 								<td>Gynecological</td>
 								<td>Pelvic</td>
 								<td>76856</td>
+								<td>$129</td>
 							</tr>
 							<tr>
 								<td>Gynecological</td>
 								<td>Transvaginal</td>
 								<td>76830</td>
+								<td>$129</td>
 							</tr>
 							<!-- Fertility -->
 							<tr>
 								<td>Fertility - follicle checks</td>
 								<td>Transvaginal</td>
 								<td>76830</td>
+								<td>$129</td>
 							</tr>
 							<!-- Abdominal -->
 							<tr>
 								<td>Abdominal</td>
 								<td>Gallbladder, liver, kidneys, etc.</td>
 								<td>76700</td>
+								<td>$129</td>
 							</tr>
 							<!-- Thyroid -->
 							<tr>
 								<td>Thyroid</td>
 								<td></td>
 								<td>76836</td>
+								<td>$129</td>
 							</tr>
 						</tbody>
 					</table>
