--- a/diagnostic.html
+++ b/diagnostic.html
@@ -114,8 +114,8 @@
 							<tr>
 								<th>Type</th>
 								<th>Description</th>
-								<th>Code</th>
-								<th>Price</th>
+								<th>Exam Codes</th>
+								<th>Self-Pay</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -134,15 +134,23 @@
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
-								<td>3rd trimester growth</td>
+								<td>3rd trimester with growth - ama, gdm, preeclampsia, AFI, position, </br>placenta
+									check,
+									small for gestational age, large for gestational age.</td>
 								<td>76805</td>
-								<td>$129</td>
+								<td>$139</td>
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
 								<td>AFI, position, placenta check, misc.</td>
 								<td>76816</td>
-								<td>$105</td>
+								<td>$119</td>
+							</tr>
+							<tr>
+								<td>Obstetrical</td>
+								<td>Transvaginal - Placenta previa, cervical length, ectopic, early pregnancy</td>
+								<td>76817</td>
+								<td>$119</td>
 							</tr>
 							<tr>
 								<td>Obstetrical</td>
@@ -172,21 +180,29 @@
 							</tr>
 							<!-- Abdominal -->
 							<tr>
-								<td>Abdominal</td>
-								<td>Gallbladder, liver, kidneys, etc.</td>
+								<td>Abdominal - Complete</td>
+								<td>Gallbladder, liver, kidneys, pancreas, spleen, aorta</td>
 								<td>76700</td>
+								<td>$149</td>
+							</tr>
+							<tr>
+								<td>Abdominal - Limited</td>
+								<td>Single organ exam</td>
+								<td>76705</td>
 								<td>$129</td>
 							</tr>
 							<!-- Thyroid -->
 							<tr>
 								<td>Thyroid</td>
-								<td></td>
+								<td>Thyroid</td>
 								<td>76836</td>
 								<td>$129</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
+				<p style="text-align: center;">If two exams are performed, the second exam is discounted by 50%</p>
+
 				<p style="text-align: center;">We accept most insurances and also offer <b>self-pay options</b></p>
 
 				<p style="text-align: center;">Have Questions? Give us a call!</p>
