team removal and gift card button

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
 					<h1>Our Staff</h1>
 				</header>
 				<div class="spotlights">
-					<section>
+					<!-- <section>
 						<div class="image"><img src="images/momzo.png" alt="" /></div>
 						<div class="content">
 							<header class="major">
@@ -219,7 +219,7 @@
 								life! We offer many entertainment 2D/ 3D and 4D ultrasound packages to fit every budget
 								and we look forward to welcoming you!</p>
 						</div>
-					</section>
+					</section> -->
 					<section>
 						<div class="image"><img src="images/deanna.png" alt="" /></div>
 						<div class="content">
@@ -237,52 +237,6 @@
 								her passion for obstetric ultrasound. She relocated to Rhode Island in 2010 and was
 								determined to find a job doing what she loves most and fate brought her to Babies and
 								Bellies!</p>
-						</div>
-					</section>
-
-					<section>
-						<div class="image"><img src="images/stacy.png" alt="" /></div>
-						<div class="content">
-							<header class="major">
-								<h3>Stacy Smith</h3>
-							</header>
-							<p class="bio-spotlights">Stacy, was born & raised right here in Rhode Island; She has been
-								with Babies and Bellies
-								as front end reception since May of 2015. Stacy had previously worked for an OBGYN
-								office as a Medical Assistant for years before deciding to go back to school to further
-								her education and earn her degree.</br></br>
-
-								She attended The Community College of Rhode Island, earning her A.A in General Studies
-								and then continued her education at Rhode Island College; where she earned her B.A. in
-								Psychology. Stacy is a Social Worker full time, where she has for the last 15 years
-								worked with children and families from various, diverse backgrounds.</br></br>
-
-								Stacy is also a single mom who loves spending time with her now young adult son.
-								Together they enjoy taking trips to Disney World as well as tropical locations such as
-								Mexico.</br></br>
-
-								In her spare time, Stacy enjoys reading, spending time with friends and family, and
-								working on her flower garden. She also loves to cook and create new recipes.</br></br>
-
-								As of late, Stacy also enjoys helping others feel empowered and beautiful with her own
-								small jewelry business; Sparklyn’ with Stacy. </p>
-						</div>
-					</section>
-
-					<section>
-						<div class="image"><img src="images/brittany.png" alt="" /></div>
-						<div class="content">
-							<header class="major">
-								<h3>Brittany Gallant</h3>
-							</header>
-							<p class="bio-spotlights">Brittany started at Babies & Bellies in the summer of 2020, with 8
-								years of customer
-								service experience. She has an Associate in Fine Arts degree from CCRI Warwick, and
-								enjoys being creative in her time away from work, sewing and crafting.</br></br>
-
-								Brittany volunteers at Friends Way, an organization focused on helping local children
-								through the grieving process. Recently became an aunt for the second time, Brittany is
-								loving life with little ones in her family.</p>
 						</div>
 					</section>
 
@@ -308,29 +262,6 @@
 								originally sparked her interest in the ultrasound field. She started her position at
 								Babies and Bellies in 2021 and is thrilled to be working with an exceptional team doing
 								what she loves.</p>
-						</div>
-					</section>
-					<section>
-						<div class="image"><img src="images/jocelyn.png" alt="" /></div>
-						<div class="content">
-							<header class="major">
-								<h3>Jocelyn Eichenfeldt</h3>
-							</header>
-							<p class="bio-spotlights">Jocelyn was raised in Rhode Island, and after graduating high
-								school she moved to Fort
-								Myers FL. Only a short time after moving, she decided Rhode Island was where she needed
-								to be. After moving back to Rhode Island in 2019 Jocelyn joined the Babies and Bellies
-								family.</br></br>
-
-								Soon after beginning her work at Babies and Bellies, Jocelyn realized she has a passion
-								and great interest for Obstetrics and began working at an OB/Gyn office in Pawtucket
-								Rhode Island where she is currently a medical secretary.</br></br>
-
-								In her free time, Jocelyn enjoys kayaking, fishing, and cooking.</br></br>
-
-								Jocelyn’s goal for the future is to one day establish a Non-Profit Organization based in
-								Rhode Island for young moms and dads to receive support for themselves and their new
-								baby’s lives.</p>
 						</div>
 					</section>
 
