--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
 					<li><a href="book-now.html" class="button primary wide scrolly">Schedule Now</a></li>
 					<li><a href="tel:4017372229" class="button primary wide scrolly">Call Now</a></li>
 				</ul>
+				<ul class="actions special">
+					<li><a href="https://www.vagaro.com/us03/babiesandbellies3dultrasoundstudio/gift-certificates"
+							class="button wide scrolly">Purchase Gift Card</a></li>
+				</ul>
 			</div>
 		</section>
 
